// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover> Snapshots and structure should render story 'Alignments' 1`] = `
[
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-top-start"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover aligned on start of the top side
      </ClickAwayProvider>
    </div>
  </Portal>,
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-top-end"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover aligned on start of the top side
      </ClickAwayProvider>
    </div>
  </Portal>,
]
`;

exports[`<Popover> Snapshots and structure should render story 'Auto' 1`] = `
<Portal
  containerInfo={<body />}
>
  <div
    className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-auto"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "zIndex": 9999,
      }
    }
  >
    <ClickAwayProvider
      childrenRefs={
        {
          "current": [
            {
              "current": null,
            },
            {
              "current": null,
            },
          ],
        }
      }
    >
      Popover
    </ClickAwayProvider>
  </div>
</Portal>
`;

exports[`<Popover> Snapshots and structure should render story 'Default' 1`] = `
<Portal
  containerInfo={<body />}
>
  <div
    className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-bottom"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "zIndex": 9999,
      }
    }
  >
    <ClickAwayProvider
      childrenRefs={
        {
          "current": [
            {
              "current": null,
            },
            {
              "current": null,
            },
          ],
        }
      }
    >
      Popover
    </ClickAwayProvider>
  </div>
</Portal>
`;

exports[`<Popover> Snapshots and structure should render story 'MatchingWidth' 1`] = `
<Portal
  containerInfo={<body />}
>
  <div
    className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-bottom-start"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "zIndex": 9999,
      }
    }
  >
    <ClickAwayProvider
      childrenRefs={
        {
          "current": [
            {
              "current": null,
            },
            {
              "current": null,
            },
          ],
        }
      }
    >
      Popover's width matching anchor's
    </ClickAwayProvider>
  </div>
</Portal>
`;

exports[`<Popover> Snapshots and structure should render story 'Offset' 1`] = `
<Portal
  containerInfo={<body />}
>
  <div
    className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-right"
    style={
      {
        "left": "0",
        "position": "absolute",
        "top": "0",
        "zIndex": 9999,
      }
    }
  >
    <ClickAwayProvider
      childrenRefs={
        {
          "current": [
            {
              "current": null,
            },
            {
              "current": null,
            },
          ],
        }
      }
    >
      Popover
    </ClickAwayProvider>
  </div>
</Portal>
`;

exports[`<Popover> Snapshots and structure should render story 'Positions' 1`] = `
[
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-left"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover
      </ClickAwayProvider>
    </div>
  </Portal>,
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-top"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover
      </ClickAwayProvider>
    </div>
  </Portal>,
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-bottom"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover
      </ClickAwayProvider>
    </div>
  </Portal>,
  <Portal
    containerInfo={<body />}
  >
    <div
      className="lumx-spacing-padding-huge lumx-popover lumx-popover--elevation-3 lumx-popover--position-right"
      style={
        {
          "left": "0",
          "position": "absolute",
          "top": "0",
          "zIndex": 9999,
        }
      }
    >
      <ClickAwayProvider
        childrenRefs={
          {
            "current": [
              {
                "current": null,
              },
              {
                "current": null,
              },
            ],
          }
        }
      >
        Popover
      </ClickAwayProvider>
    </div>
  </Portal>,
]
`;
